kube/deploy/apps/satisfactory/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app satisfactory
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    # same namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # players
    - fromCIDRSet:
        - cidr: "${IP_ROUTER_LAN_CIDR}"
        - cidr: "${IP_WG_USER_1_V4}"
        - cidr: "${IP_WG_GUEST_V4}"
      toPorts:
        - ports:
            - port: "7777"
              protocol: UDP
            - port: "15000"
              protocol: UDP
            - port: "15777"
              protocol: UDP
  egress:
    # same namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # allow downloading game runtime files
    - toEntities:
        - world
    # L7 DNS inspection & proxy
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
          rules:
            dns:
              - matchPattern: "*"
